--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 							<ul class="links">
 								<li><a href="https://www.linkedin.com/in/shubhankarsingh13/">linkedin</a></li>
 								<li><a href="https://www.instagram.com/shubhankar_s_singh/">Instagram</a></li>
+								<li><a href="https://public.tableau.com/app/profile/shubhankar.singh13">Tableau</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -76,12 +77,11 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="https://tome.app/private-work-b79/exploring-the-world-of-movies-an-imdb-analysis-clfcffuxc1fcfao40rqefjsbf" class="image"><img src="images/photo03.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/views/NetflixContentReview_16807028441600/NetflixDashboard?:language=en-US&:display_count=n&:origin=viz_share_link" class="image"><img src="images/netflix image.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">The World Of Movies: An IMDB Analysis</h2>
-										<p>This project is an analysis of the IMDB movie database. It seeks to uncover insights about the movie industry by analyzing data about movies, actors, directors, and more.
-											The project was designed to provide a comprehensive overview of the movie industry, from the most popular genres to the most successful directors.</p>
-										<a href="https://tome.app/private-work-b79/exploring-the-world-of-movies-an-imdb-analysis-clfcffuxc1fcfao40rqefjsbf" class="special">View Project</a>
+										<h2 class="major">StreamScene: Netflix Data at a Glance</h2>
+										<p>Explore the world of Netflix with our interactive Tableau dashboard. Discover trends, analyze data, and gain insights into your favorite movies and shows. With easy-to-use visualizations, our dashboard is the perfect tool for any Netflix enthusiast.</p>
+										<a href="https://public.tableau.com/views/NetflixContentReview_16807028441600/NetflixDashboard?:language=en-US&:display_count=n&:origin=viz_share_link" class="special">View Project</a>
 									</div>
 								</div>
 							</section>
@@ -112,10 +112,11 @@
 											<a href="https://tome.app/private-work-b79/call-volume-chronicles-unveiling-insights-with-data-analysis-clfmk0r5l2scr5d3yo1s9h8or" class="special">View Project</a>
 										</article>
 										<article>
-											<a href="https://tome.app/private-work-b79/uncovering-the-insights-of-instagram-user-analytics-clcx8cp362ixx963znpq97jzu" class="image"><img src="images/photo07.png" alt="" /></a>
-											<h3 class="major">Instagram User Analytics</h3>
-											<p>Instagram user analytics data includes demographic information, such as age, gender, location, and interests. It also includes engagement metrics, such as likes, comments, and shares. In this project we were supposed to create a database of instagram analytics using SQL and run an analysis through it.</p>
-											<a href="https://tome.app/private-work-b79/uncovering-the-insights-of-instagram-user-analytics-clcx8cp362ixx963znpq97jzu" class="special">View Project</a>
+											<a href="https://tome.app/private-work-b79/exploring-the-world-of-movies-an-imdb-analysis-clfcffuxc1fcfao40rqefjsbf" class="image"><img src="images/photo03.jpg" alt="" /></a>
+											<h3 class="major">The World Of Movies: An IMDB Analysis</h3>
+											<p>This project is an analysis of the IMDB movie database. It seeks to uncover insights about the movie industry by analyzing data about movies, actors, directors, and more.
+											The project was designed to provide a comprehensive overview of the movie industry, from the most popular genres to the most successful directors.</p>
+											<a href="https://tome.app/private-work-b79/exploring-the-world-of-movies-an-imdb-analysis-clfcffuxc1fcfao40rqefjsbf" class="special">View Project</a>
 										</article>
 									</section>
 									
