--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Shubhankar S Singh</h2>
-							<p>Data Analyst well versed in SQL, R, Microsoft Excel and Tableau with a passion for driving business growth and optimizing performance.</p>
+							<p>Business Analyst well versed in SQL, R, Microsoft Excel and Tableau with a passion for driving business growth and optimizing performance.</p>
 						</div>
 					</section>
 
